examples/sidecar/sidecar.yaml
# -------------------------------------------------
# OPA sidecar manifests
# -------------------------------------------------

# Envoy filter to delegate authz requests to an OPA sidecar
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_authz
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            transport_api_version: V3
            status_on_error:
              code: ServiceUnavailable
            with_request_body:
              max_request_bytes: 8192
              allow_partial_message: true
            grpc_service:
              google_grpc:
                target_uri: 127.0.0.1:9191
                stat_prefix: "ext_authz"
---
# ----------------------------------
# Load policy from bundle (instead of ConfigMap)
# ----------------------------------
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: opa-bundle
# spec:
#   hosts:
#    - https://github.com
#   ports:
#   - number: 443
#     name: https
#     protocol: HTTPS
#   resolution: DNS
#   location: MESH_EXTERNAL
---
# -------------------------------------------------
# OPA sidecar admission controller manifests.
# The admission controller webhook is triggered whenever
# a new workload is deployed. The webhook calls the
# admission controller to inject an OPA sidecar into a pod.
# Using a sidecar saves the network hop to a central OPA
# external authz server.
# -------------------------------------------------

apiVersion: v1
kind: Namespace
metadata:
  name: opa-istio
---
# admission controller service
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
  namespace: opa-istio
  labels:
    app: admission-controller
spec:
  ports:
    - port: 443
      name: https
  selector:
    app: admission-controller
---
# admission controller deployment — injects OPA sidecars
# when called by the admission webhook
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-controller
  namespace: opa-istio
  name: admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-controller
  template:
    metadata:
      labels:
        app: admission-controller
      name: admission-controller
    spec:
      containers:
        - image: openpolicyagent/opa:latest
          name: opa
          ports:
            - containerPort: 443
          args:
            - "run"
            - "--server"
            - "--tls-cert-file=/certs/tls.crt"
            - "--tls-private-key-file=/certs/tls.key"
            - "--addr=0.0.0.0:443"
            - "/policies/inject.rego"
          livenessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: server-cert
            - readOnly: true
              mountPath: /policies
              name: inject-policy
      volumes:
        - name: inject-policy
          configMap:
            name: inject-policy
        - name: server-cert
          secret:
            secretName: server-cert
---
# admission controller webhook
# — calls admission-controller service to inject OPA sidecar into pod
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: opa-istio-admission-controller
webhooks:
  - name: istio.openpolicyagent.org
    sideEffects: None
    admissionReviewVersions: ["v1"]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1", "v1beta1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        opa-istio-injection: enabled
    failurePolicy: Fail
    clientConfig:
      service:
        name: admission-controller
        namespace: opa-istio
        path: "/v0/data/istio/inject"
      caBundle: |-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZZRENDQTBpZ0F3SUJBZ0lKQUlWYlFzL2o3
[...]
        VXFIM2h6aGZ1QlpDMmNmCi0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
